Mail template düzeltildi, brutalism gorsel

--- a/content/dergi/sayi-1/sayi-1-içindekiler.html
+++ b/content/dergi/sayi-1/sayi-1-içindekiler.html
@@ -7,6 +7,7 @@ aciklama="Kafasını yumurtadan çıkartan Markut, her sayısıyla büyüyecek v
 date = "2020-09-01"
 kapak="/img/sayi-1-cover.gif"
 thumb="/img/sayi-1-cover.gif"
+emailimg="mail-illustrasyonu.png"
 renk="#f0f0ff"
 yazar=["Markut"]
 sayi=[
