--- a/content/dergi/sayi-12/kapak.html
+++ b/content/dergi/sayi-12/kapak.html
@@ -8,6 +8,7 @@ sayi = ["12"]
 seotitle = "Tasarım Dergisi Sayı 12 - Ağustos 2021"
 tags = []
 thumb = "/img/markut-kapak-sayi-12-agustos-2021.png"
+emailimg="mail-illustrasyonu.png"
 renk="#ffefff"
 title = "Sayı 12 İçindekiler"
 type = "kapak"
