--- a/content/dergi/sayi-13/kapak.html
+++ b/content/dergi/sayi-13/kapak.html
@@ -12,6 +12,7 @@ sayi=[
 sayfa="00"
 kapak="/img/markut-sayi-13-eylul-2021-kapak.svg"
 thumb="/img/markut-eylul-2021-sayi-13.png"
+emailimg="mail-illustrasyonu.png"
 renk="#F2F2F9"
 type= "kapak"
 tags=[]
