--- a/content/dergi/sayi-14/brutalizm/index.html
+++ b/content/dergi/sayi-14/brutalizm/index.html
@@ -141,7 +141,7 @@ tags= ["dergi"]
             referrerpolicy="no-referrer"
             alt="Trinity Square Otoparkı, İngiltere"
          >}}
-         <p><em>Trinity Square Otoparkı, İngiltere</em></p>
+         <p><em>Robin Hood Gardens Konut Projesi, Londra, İngiltere</em></p>
       </div>
       <div class="col-md-5">
          {{<img
@@ -149,7 +149,7 @@ tags= ["dergi"]
             referrerpolicy="no-referrer"
             alt="Robin Hood Gardens Konut Projesi, Londra, İngiltere"
          >}}
-         <p><em>Robin Hood Gardens Konut Projesi, Londra, İngiltere</em></p>
+         <p><em>Trinity Square Otoparkı, İngiltere</em></p>
       </div>
    </div>
 
@@ -239,7 +239,7 @@ tags= ["dergi"]
 <div class="container-fluid mb-5">
    <div
       style="
-         background-image: url('alexander-lotersztain-design-furniture.jpg');
+         background-image: url('https://www.markut.net/sayi-14/brutalizm-nedir-mimari-urun-tasarim/alexander-lotersztain-design-furniture.jpg');
       "
       class="bg-mrkt"
    >
