--- a/content/dergi/sayi-14/kapak.html
+++ b/content/dergi/sayi-14/kapak.html
@@ -12,6 +12,7 @@ sayi=[
 sayfa="00"
 kapak="/img/markut-ekim-2021-sayi-14.jpg"
 thumb="/img/markut-ekim-2021-sayi-14.jpg"
+emailimg="markut-ekim-sayisi.png"
 renk="#f4edeb"
 type= "kapak"
 tags=[]
