--- a/content/dergi/sayi-14/mercedes-benz-300sl/index.html
+++ b/content/dergi/sayi-14/mercedes-benz-300sl/index.html
@@ -4,7 +4,7 @@ description=""
 url="sayi-14/mercedes-benz-300-sl-gullwing-marti-kanat"
 aciklama="İkinci Dünya Savaşı'nda ağır hasarlar alan Mercedes tekrardan eski gücüne kavuşmak istiyordu. Bu eski gücü Mercedes’e kazandıracak şey tabi ki de otomobil yarışlarıydı. Mercedes 1952-1954 yılları arasında 300 SL'i yarış otomobili olarak üretmiştir."
 type="sayfa"
-thumb="/img/mercedes-300-sl-marti-kanat-thumbnail"
+thumb="/img/mercedes-300-sl-marti-kanat-thumbnail.jpg"
 date = "2021-09-30"
 sayi=["14"]
 sayfa="05"
