--- a/content/dergi/sayi-14/storyboard/index.html
+++ b/content/dergi/sayi-14/storyboard/index.html
@@ -4,7 +4,7 @@ description=""
 url="sayi-14/storyboard-nedir"
 aciklama="Storyboard, bilgileri görsel olarak planlama, düzenleme, şematik hale getirme ve sunmanın bir yoludur. Bir sürecin olay örgüsünü göstermek için kullanılır. Süreç içinde yaşananlar hikaye panoları içinde sıralı çizimler dizisi olarak oluşturulur. Panolara ayrılmasını sebebi, her panonun önemli bir adımı oluşturmasıdır. Her adım bir durumu anlatır; başından sonuna bakıldığında ise bir hikaye veya kısa bir film şeridi görünür ve okunur."
 type="sayfa"
-thumb="/img/storyboard-thumbnail"
+thumb="/img/storyboard-thumbnail.jpg"
 date = "2021-09-30"
 sayi=["14"]
 sayfa="04"
