--- a/content/dergi/sayi-2/sayi-2-kapak.html
+++ b/content/dergi/sayi-2/sayi-2-kapak.html
@@ -7,6 +7,7 @@ aciklama="\"Bir felsefem yok, en sevdiğim şey stüdyoda oturmak.\""
 date = "2020-10-01"
 thumb="/img/markut-sayi-2-ekim-2020.png"
 kapak="/img/markut-sayi-2-ekim-2020.png"
+emailimg="mail-illustrasyonu.png"
 renk="#ffefef"
 yazar=["Markut"]
 sayi=[
