--- a/content/dergi/sayi-4/sayi-4-kapak.html
+++ b/content/dergi/sayi-4/sayi-4-kapak.html
@@ -7,6 +7,7 @@ aciklama="<h3>Dünü Unutma, Bu Günü Eyi Anlarsın.</h3> <br><br><br><small>Sa
 date = "2020-12-01"
 thumb="/img/markut-aralik-sayi-4.svg"
 kapak="/img/markut-aralik-sayi-4.svg"
+emailimg="mail-illustrasyonu.png"
 renk="#fffef3"
 yazar=["Markut"]
 sayi=[
