--- a/content/dergi/sayi-9/kapak.html
+++ b/content/dergi/sayi-9/kapak.html
@@ -12,6 +12,7 @@ sayi=[
 sayfa="00"
 kapak="/img/markut-sayi-9-kapak-mayis-2021.svg"
 thumb="/img/markut-sayi-9-mayis-2021.png"
+emailimg="mail-illustrasyonu.png"
 renk="#fffbeb"
 type= "kapak"
 tags=[]
