--- a/content/dergi/sayi-10/kapak.html
+++ b/content/dergi/sayi-10/kapak.html
@@ -12,6 +12,7 @@ sayi=[
 sayfa="00"
 kapak="/img/markut-haziran-sayi-10-kapak-tasarimi.svg"
 thumb="/img/markut-haziran-sayi-10-kapak-tasarimi.png"
+emailimg="mail-illustrasyonu.png"
 renk="#efefff"
 type= "kapak"
 tags=[]
