--- a/content/dergi/sayi-11/kapak.html
+++ b/content/dergi/sayi-11/kapak.html
@@ -12,6 +12,7 @@ sayi=[
 sayfa="00"
 kapak="/img/markut-sayi-11-kapak-haziran-2021.svg"
 thumb="/img/markut-kapak-sayi-11-haziran-2021.png"
+emailimg="mail-illustrasyonu.png"
 renk="#fceeee"
 type= "kapak"
 tags=[]
