--- a/content/dergi/sayi-7/kapak.html
+++ b/content/dergi/sayi-7/kapak.html
@@ -12,6 +12,7 @@ sayi=[
 sayfa="00"
 kapak="/img/mart-2021-sayi.svg"
 thumb="/img/mart-2021-markut-sayi-7.png"
+emailimg="mail-illustrasyonu.png"
 renk ="#f7f4ec"
 type= "kapak"
 tags=[]
