--- a/content/dergi/sayi-8/kapak.html
+++ b/content/dergi/sayi-8/kapak.html
@@ -12,6 +12,7 @@ sayi=[
 sayfa="00"
 kapak="/img/markut-nisan-sayi-8-2021.svg"
 thumb="/img/markut-nisan-sayi-8-2021.png"
+emailimg="mail-illustrasyonu.png"
 renk="#f5ffef"
 type= "kapak"
 tags=[]
