--- a/content/email/v2.html
+++ b/content/email/v2.html
@@ -1401,6 +1401,123 @@
                                           <tbody>
                                              <tr>
                                                 <td
+                                                   align="left"
+                                                   style="
+                                                      font-size: 0px;
+                                                      padding: 10px 25px;
+                                                      word-break: break-word;
+                                                   "
+                                                >
+                                                   <div
+                                                      style="
+                                                         font-family: Roboto,
+                                                            Helvetica,
+                                                            sans-serif;
+                                                         font-size: 16px;
+                                                         font-weight: 300;
+                                                         line-height: 24px;
+                                                         text-align: left;
+                                                         color: #616161;
+                                                      "
+                                                   >
+                                                      <small
+                                                         >Bu mail Markut'a abone
+                                                         olduğunuz için
+                                                         gönderilmiştir.
+                                                         Dilediğiniz zaman
+                                                         <a
+                                                            style="
+                                                               color: #000000;
+                                                            "
+                                                            href="{{UnsubscribeURL}}"
+                                                            >abonelikten
+                                                            çıkabilirsiniz.</a
+                                                         >
+                                                         {{SenderInfo}}</small
+                                                      >
+                                                      <small
+                                                         ><a
+                                                            style="
+                                                               color: #eeeeee;
+                                                            "
+                                                            href="{{RewardsURL}}"
+                                                            >EmailOctopus
+                                                            Aracılığıyla.</a
+                                                         ></small
+                                                      >
+                                                   </div>
+                                                </td>
+                                             </tr>
+                                          </tbody>
+                                       </table>
+                                    </td>
+                                 </tr>
+                              </tbody>
+                           </table>
+                        </div>
+                        <!--[if mso | IE]></td></tr></table><![endif]-->
+                     </td>
+                  </tr>
+               </tbody>
+            </table>
+         </div>
+         <!--[if mso | IE]></td></tr></table><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+         <div style="margin: 0px auto; max-width: 600px">
+            <table
+               align="center"
+               border="0"
+               cellpadding="0"
+               cellspacing="0"
+               role="presentation"
+               style="width: 100%"
+            >
+               <tbody>
+                  <tr>
+                     <td
+                        style="
+                           direction: ltr;
+                           font-size: 0px;
+                           padding: 0px;
+                           text-align: center;
+                        "
+                     >
+                        <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:600px;" ><![endif]-->
+                        <div
+                           class="mj-column-per-100 mj-outlook-group-fix"
+                           style="
+                              font-size: 0px;
+                              text-align: left;
+                              direction: ltr;
+                              display: inline-block;
+                              vertical-align: top;
+                              width: 100%;
+                           "
+                        >
+                           <table
+                              border="0"
+                              cellpadding="0"
+                              cellspacing="0"
+                              role="presentation"
+                              width="100%"
+                           >
+                              <tbody>
+                                 <tr>
+                                    <td
+                                       style="
+                                          vertical-align: top;
+                                          padding-top: 20px;
+                                       "
+                                    >
+                                       <table
+                                          border="0"
+                                          cellpadding="0"
+                                          cellspacing="0"
+                                          role="presentation"
+                                          width="100%"
+                                       >
+                                          <tbody>
+                                             <tr>
+                                                <td
                                                    align="center"
                                                    style="
                                                       font-size: 0px;
